--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 <body>
 
- <nav class = "navbar navbar-expand-md navbar-light bg-light">
-      <a class="navbar-brand" href="#"><img src = "favicon.ico" width="40" height="40" alt="">RESUME</a>
+ <nav class = "navbar navbar-expand-lg navbar-light bg-light" >
+      <a class="navbar-brand" href="#">
+        <img src = "favicon.ico" width="40" height="40" alt="">RESUME</a>
 
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-   <ul class = "navbar-nav ms-auto">
-        <li class = "nav-item"> 
+      </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+   <ul class = "navbar-nav md-auto">
+        <li class = "nav-item active"> 
             <a class = "nav-link" href="#section-2">ABOUT ME</a> 
         </li>
         <li class = "nav-item">
@@ -117,6 +118,6 @@
 
 
 
-    <script src="bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.min.js"></script>
 </body>
 </html>
